--- a/Day5/app/src/main/res/values/strings.xml
+++ b/Day5/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">NavigationComponentExample</string>
+    <string name="app_name">Pokedex</string>
     <string name="refresh">Refresh</string>
 </resources>
