--- a/MovieProject/app/src/main/res/values/strings.xml
+++ b/MovieProject/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">My Movie List</string>
     <string name="textview">TextView</string>
+    <string name="release_date" />
 </resources>
