--- a/MovieProject/app/src/main/res/values/strings.xml
+++ b/MovieProject/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">My Movie List</string>
     <string name="textview">TextView</string>
     <string name="release_date" />
+    <string name="moviephoto">moviePhoto</string>
 </resources>
