--- a/MovieProject/app/src/main/res/values/strings.xml
+++ b/MovieProject/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="textview">TextView</string>
     <string name="release_date" />
     <string name="moviephoto">moviePhoto</string>
+    <string name="cast">Cast</string>
+    <string name="about">About</string>
+    <string name="recommendations">Recommendations</string>
 </resources>
