--- a/MovieProject/app/src/main/res/values/strings.xml
+++ b/MovieProject/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="cast">Cast</string>
     <string name="about">About</string>
     <string name="recommendations">Recommendations</string>
+    <string name="biography">Biography</string>
 </resources>
