--- a/day4/app/src/main/res/values/strings.xml
+++ b/day4/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">day4</string>
     <string name="textview">TextView</string>
     <string name="button">Button</string>
+    <string name="textview2">textview</string>
 </resources>
